chore: 테스트 레포에서 뼈대 코드 + 프론트 통합 및 수정
- 프론트/백엔드 코드 통합 및 경로 수정
- 테스트 완료 후 공유 레포 이전 준비